--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,10 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceRoot}/src/main.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "env": {
+                "PATH": "${workspaceRoot}/bin"
+            }
         }
     ]
 }
