--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,16 @@ authors = ["Johannes Schriewer <hallo@dunkelstern.de>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = ">=3.6,<3.9"
-pyside2 = "^5.14.2"
+python = ">=3.7,<3.10"
+pyside2 = ">=5.14"
 pytradfri = { git = "https://github.com/ggravlingen/pytradfri.git", branch="master"}
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.5.2"
 mypy = "^0.770"
-pywin32 = "^227"
-pywin32-ctypes = "^0.2.0"
 pyinstaller = "^3.6"
+pywin32-ctypes = {version = "^0.2.0", platform = "windows"}
+pywin32 = {version = "^227", platform = "windows"}
 
 [build-system]
 requires = ["poetry>=0.12"]
